--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,14 @@ import Lunar from "../assets/lunar.svg";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>trafficlunar.net</title>
+
+		<meta name="title" content="trafficlunar.net" />
+		<meta name="description" content="welcome to trafficlunar's website!" />
+		<meta name="keywords" content="trafficlunar, programming" />
+		<meta name="robots" content="index, follow" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="language" content="English" />
+
 		<ClientRouter />
 	</head>
 	<body class="bg-base text-text flex flex-col items-center">
