--- a/src/components/Tools.astro
+++ b/src/components/Tools.astro
@@ -27,7 +27,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 		<hr class="flex-grow border-surface1" />
 	</div>
 
-	<div class="flex gap-1 mb-4 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
+	<div class="flex flex-wrap gap-1 mb-4 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
 		<div>
 			<VSCodiumIcon class="size-5" />
 			<span>VSCodium</span>
@@ -45,7 +45,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 		<hr class="flex-grow border-surface1" />
 	</div>
 
-	<div class="flex gap-1 mb-4 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
+	<div class="flex flex-wrap gap-1 mb-4 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
 		<div>
 			<TypeScriptIcon class="size-5" />
 			<span>TypeScript</span>
@@ -78,7 +78,8 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 		<span>frameworks</span>
 		<hr class="flex-grow border-surface1" />
 	</div>
-	<div class="flex gap-1 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
+
+	<div class="flex flex-wrap gap-1 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
 		<div>
 			<SvelteIcon class="size-5" />
 			<span>Svelte</span>
@@ -102,7 +103,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 	</div>
 
 	<!-- separator -->
-	<div class="flex items-center gap-4 text-subtext0 text-sm font-medium my-2">
+	<div class="flex flex-wrap items-center gap-4 text-subtext0 text-sm font-medium my-2">
 		<hr class="w-4 border-surface1" />
 		<span>infrastructure</span>
 		<hr class="flex-grow border-surface1" />
