--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,30 +33,33 @@ import Lunar from "../assets/lunar.svg";
 
 		<ClientRouter />
 	</head>
-	<body class="bg-base text-text flex flex-col items-center">
+	<body class="bg-base text-text flex flex-col items-center px-8">
 		<a href="/" transition:persist>
 			<KawaiiLogo class="w-full h-48 mt-16 transition-transform duration-300 hover:rotate-2 hover:scale-105" />
 		</a>
 
-		<Lunar class="fixed top-8 right-8 size-12 cursor-pointer animate-avoid hover:animate-running not-hover:animate-pause" />
-		<TrafficConeAlt class="fixed size-12 bottom-0 left-8 text-peach" />
-		<TrafficConeAlt class="fixed size-14 bottom-0 left-19 text-peach" />
+		<Lunar class="absolute top-8 right-8 size-12 cursor-pointer animate-avoid hover:animate-running not-hover:animate-pause" />
 
-		<div class="max-w-4xl grid grid-cols-5 gap-4 py-8">
-			<div transition:persist>
+		<div class="max-w-4xl grid grid-cols-5 gap-4 py-8 max-[56rem]:grid-cols-1">
+			<div class="flex flex-col items-center max-[56rem]:flex-row max-[56rem]:justify-center max-sm:flex-col gap-8" transition:persist>
 				<a href="/">
 					<img
 						src="/pfp.png"
 						alt="profile picture"
-						class="rounded-full animate-spin animate-duration-2s hover:animate-running not-hover:animate-pause"
+						class="rounded-full animate-spin animate-duration-2s hover:animate-running not-hover:animate-pause max-h-40"
 					/>
 				</a>
 
-				<Socials />
-				<Clock client:only />
+				<div class="flex flex-col justify-center max-sm:flex-row max-[56rem]:items-center max-[56rem]:mt-8 max-sm:mt-0 max-sm:gap-2">
+					<Socials />
+					<Clock client:only />
+				</div>
 			</div>
 
-			<div class="col-span-4 flex flex-col">
+			<div class="col-span-4 flex flex-col relative">
+				<TrafficConeAlt class="absolute size-12 bottom-full left-16 text-peach" />
+				<TrafficConeAlt class="absolute size-14 bottom-full left-27 text-peach" />
+
 				<slot />
 				<Footer />
 			</div>
