--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,9 +15,9 @@ import LocationIcon from "../assets/icons/location.svg";
 		<p>
 			Hey there, I'm <strong class="text-peach">trafficlunar</strong>. I'm a <Age client:only /> year old self-proclaimed full-stack developer and sysadmin.
 		</p>
-		<p>You can view what I'm currently doing by going <a href="/status" class="link">here</a>.</p>
+		<p class="my-2">You can view what I'm currently doing by going <a href="/status" class="link">here</a>.</p>
 
-		<div class="flex gap-1 mt-2">
+		<div class="flex gap-1 mt-4">
 			<div class="text-sm rounded-lg bg-peach/25 text-peach w-fit px-2 py-0.5 flex gap-1 items-center">
 				<PersonIcon />
 				he/him
