refactor: replace MyAnimeList with AniList

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -4,7 +4,7 @@ import BlueskyIcon from "../assets/icons/socials/bluesky.svg";
 import RedditIcon from "../assets/icons/socials/reddit.svg";
 import DiscordIcon from "../assets/icons/socials/discord.svg";
 import YouTubeIcon from "../assets/icons/socials/youtube.svg";
-import MyAnimeListIcon from "../assets/icons/socials/myanimelist.svg";
+import AniListIcon from "../assets/icons/socials/anilist.svg";
 import LastFMIcon from "../assets/icons/socials/lastfm.svg";
 import MailIcon from "../assets/icons/socials/mail.svg";
 ---
@@ -28,7 +28,7 @@ import MailIcon from "../assets/icons/socials/mail.svg";
 			<a href="https://www.youtube.com/@trafficlunar" data-tooltip="YouTube"><YouTubeIcon /></a>
 		</li>
 		<li>
-			<a href="https://myanimelist.net/profile/trafficlunar" data-tooltip="MyAnimeList"><MyAnimeListIcon /></a>
+			<a href="https://anilist.co/user/trafficlunar/" data-tooltip="AniList"><AniListIcon /></a>
 		</li>
 		<li>
 			<a href="https://www.last.fm/user/axolotlmaid" data-tooltip="Last.FM"><LastFMIcon /></a>
