style: add `mb-4` to frameworks separator in tools section

--- a/src/components/Tools.astro
+++ b/src/components/Tools.astro
@@ -79,7 +79,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 		<hr class="flex-grow border-surface1" />
 	</div>
 
-	<div class="flex flex-wrap gap-1 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
+	<div class="flex flex-wrap gap-1 mb-4 *:bg-surface0/50 *:border *:border-surface1 *:rounded-md *:p-1.5 *:text-sm *:flex *:items-center *:gap-1.5">
 		<div>
 			<SvelteIcon class="size-5" />
 			<span>Svelte</span>
