--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,8 +4,6 @@ import "@fontsource-variable/jetbrains-mono";
 
 import "../style.css";
 
-import { ClientRouter } from "astro:transitions";
-
 import Socials from "../components/Socials.astro";
 import Clock from "../components/Clock.svelte";
 import Footer from "../components/Footer.astro";
@@ -30,8 +28,6 @@ import Lunar from "../assets/lunar.svg";
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="English" />
-
-		<ClientRouter />
 	</head>
 	<body class="bg-base text-text flex flex-col items-center px-8">
 		<a href="/" transition:persist>
@@ -40,8 +36,8 @@ import Lunar from "../assets/lunar.svg";
 
 		<Lunar class="absolute top-8 right-8 size-12 animate-avoid hover:animate-running not-hover:animate-pause" />
 
-		<div class="max-w-4xl grid grid-cols-5 gap-4 py-8 max-sm:grid-cols-1">
-			<div class="flex flex-col items-center gap-8 max-[56rem]:flex-row" transition:persist>
+		<div class="max-w-4xl w-full grid grid-cols-5 gap-4 py-8 max-[60rem]:grid-cols-1">
+			<div class="flex flex-col items-center gap-8 max-[60rem]:flex-row max-[60rem]:justify-center flex-wrap" transition:persist>
 				<a href="/">
 					<img
 						src="/pfp.png"
@@ -50,7 +46,7 @@ import Lunar from "../assets/lunar.svg";
 					/>
 				</a>
 
-				<div class="flex flex-col justify-center w-full max-sm:flex-row max-sm:mt-0 max-sm:gap-2">
+				<div class="flex flex-col justify-center w-fit max-[60rem]:flex-row max-[60rem]:mt-0 max-[60rem]:gap-2">
 					<Socials />
 					<Clock client:only />
 				</div>
@@ -60,7 +56,10 @@ import Lunar from "../assets/lunar.svg";
 				<TrafficConeAlt class="absolute size-12 bottom-full left-16 text-peach" />
 				<TrafficConeAlt class="absolute size-14 bottom-full left-27 text-peach" />
 
-				<slot />
+				<!-- need <main /> for transitions -->
+				<main>
+					<slot />
+				</main>
 				<Footer />
 			</div>
 		</div>
