--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -22,7 +22,7 @@ import MailIcon from "../assets/icons/socials/mail.svg";
 			<a href="https://www.reddit.com/user/trafficlunr" data-tooltip="Reddit"><RedditIcon /></a>
 		</li>
 		<li class="z-50">
-			<a href="https://discord.com/users/1076507715775496233" data-tooltip="Discord"><DiscordIcon /></a>
+			<a href="https://discord.com/users/1076507715775496233" data-tooltip="Discord: @trafficlunar"><DiscordIcon /></a>
 		</li>
 		<li>
 			<a href="https://www.youtube.com/@trafficlunar" data-tooltip="YouTube"><YouTubeIcon /></a>
