--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ import Lunar from "../assets/lunar.svg";
 					/>
 				</a>
 
-				<div class="flex flex-col justify-center w-fit max-[60rem]:flex-row max-[60rem]:mt-0 max-[60rem]:gap-2">
+				<div class="flex flex-col flex-wrap justify-center w-full max-[60rem]:flex-row max-[60rem]:mt-0 max-[60rem]:gap-2">
 					<Socials />
 					<Clock client:only />
 					<Online client:only />
