refactor: change/add some information

--- a/src/components/Tools.astro
+++ b/src/components/Tools.astro
@@ -6,7 +6,6 @@ import GoIcon from "../assets/icons/coding/go.svg";
 import RustIcon from "../assets/icons/coding/rust.svg";
 import LuaUIcon from "../assets/icons/coding/lua.svg";
 import JavaIcon from "../assets/icons/coding/java.svg";
-import PythonIcon from "../assets/icons/coding/python.svg";
 import SvelteIcon from "../assets/icons/coding/svelte.svg";
 import ReactIcon from "../assets/icons/coding/react.svg";
 import NextIcon from "../assets/icons/coding/next.svg";
@@ -21,7 +20,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 	<legend>tools</legend>
 
 	<!-- separator -->
-	<div class="flex items-center gap-4 text-subtext0 text-sm font-medium mb-2">
+	<div class="flex items-center gap-2 text-overlay2 text-sm font-medium mb-2">
 		<hr class="w-4 border-surface1" />
 		<span>editors</span>
 		<hr class="flex-grow border-surface1" />
@@ -39,7 +38,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 	</div>
 
 	<!-- separator -->
-	<div class="flex items-center gap-4 text-subtext0 text-sm font-medium my-2">
+	<div class="flex items-center gap-2 text-overlay2 text-sm font-medium my-2">
 		<hr class="w-4 border-surface1" />
 		<span>languages</span>
 		<hr class="flex-grow border-surface1" />
@@ -66,14 +65,10 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 			<JavaIcon class="size-5" />
 			<span>Java</span>
 		</div>
-		<div>
-			<PythonIcon class="size-5" />
-			<span>Python</span>
-		</div>
 	</div>
 
 	<!-- separator -->
-	<div class="flex items-center gap-4 text-subtext0 text-sm font-medium my-2">
+	<div class="flex items-center gap-2 text-overlay2 text-sm font-medium my-2">
 		<hr class="w-4 border-surface1" />
 		<span>frameworks</span>
 		<hr class="flex-grow border-surface1" />
@@ -103,7 +98,7 @@ import LinuxIcon from "../assets/icons/coding/linux.svg";
 	</div>
 
 	<!-- separator -->
-	<div class="flex flex-wrap items-center gap-4 text-subtext0 text-sm font-medium my-2">
+	<div class="flex flex-wrap items-center gap-2 text-overlay2 text-sm font-medium my-2">
 		<hr class="w-4 border-surface1" />
 		<span>infrastructure</span>
 		<hr class="flex-grow border-surface1" />
