--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,16 +13,16 @@ import LocationIcon from "../assets/icons/location.svg";
 	<section>
 		<legend>about</legend>
 		<p>
-			Hey there, I'm <strong class="text-peach">trafficlunar</strong>. I'm a <Age client:only /> year old self-proclaimed full-stack developer and sysadmin.
+			Hey! I'm <strong class="text-peach">trafficlunar</strong>. I'm a <Age client:only /> year old self-proclaimed full-stack developer.
 		</p>
-		<p class="my-2">You can view what I'm currently listening to and my computer statistics by going <a href="/status" class="link">here</a>.</p>
+		<p class="mt-2">I like coding things, maintaining and setting up servers, playing video games, and listening to music.</p>
 
 		<div class="flex gap-1 mt-4">
-			<div class="text-sm rounded bg-peach/25 text-peach w-fit pl-1 pr-1.5 py-0.5 flex gap-1 items-center">
+			<div data-tooltip="Pronouns" class="text-sm rounded bg-peach/25 text-peach w-fit pl-1 pr-2 py-1 flex gap-1 items-center">
 				<PersonIcon />
 				he/him
 			</div>
-			<div class="text-sm rounded bg-peach/25 text-peach w-fit pl-1 pr-1.5 py-0.5 flex gap-1 items-center">
+			<div data-tooltip="Location" class="text-sm rounded bg-peach/25 text-peach w-fit pl-1 pr-2 py-1 flex gap-1 items-center">
 				<LocationIcon />
 				Scotland
 			</div>
