feat: replace youtube with twitter in socials

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,7 +3,7 @@ import GitHubIcon from "../assets/icons/socials/github.svg";
 import BlueskyIcon from "../assets/icons/socials/bluesky.svg";
 import RedditIcon from "../assets/icons/socials/reddit.svg";
 import DiscordIcon from "../assets/icons/socials/discord.svg";
-import YouTubeIcon from "../assets/icons/socials/youtube.svg";
+import TwitterIcon from "../assets/icons/socials/twitter.svg";
 import AniListIcon from "../assets/icons/socials/anilist.svg";
 import LastFMIcon from "../assets/icons/socials/lastfm.svg";
 import MailIcon from "../assets/icons/socials/mail.svg";
@@ -12,6 +12,7 @@ import MailIcon from "../assets/icons/socials/mail.svg";
 <section class="side !p-2">
 	<legend>socials</legend>
 	<ul class="grid grid-cols-4 [&_a]:flex [&_a]:justify-center [&_a]:size-full [&_a]:py-1">
+		<!-- z-50 for tooltips -->
 		<li class="z-50">
 			<a href="https://github.com/trafficlunar" data-tooltip="GitHub"><GitHubIcon /></a>
 		</li>
@@ -19,13 +20,13 @@ import MailIcon from "../assets/icons/socials/mail.svg";
 			<a href="https://bsky.app/profile/trafficlunar.net" data-tooltip="Bluesky"><BlueskyIcon /></a>
 		</li>
 		<li class="z-50">
-			<a href="https://www.reddit.com/user/trafficlunr" data-tooltip="Reddit"><RedditIcon /></a>
+			<a href="https://www.twitter.com/trafficlunr" data-tooltip="Twitter"><TwitterIcon /></a>
 		</li>
 		<li class="z-50">
 			<a href="https://discord.com/users/1076507715775496233" data-tooltip="Discord: @trafficlunar"><DiscordIcon /></a>
 		</li>
 		<li>
-			<a href="https://www.youtube.com/@trafficlunar" data-tooltip="YouTube"><YouTubeIcon /></a>
+			<a href="https://www.reddit.com/user/trafficlunr" data-tooltip="Reddit"><RedditIcon /></a>
 		</li>
 		<li>
 			<a href="https://anilist.co/user/trafficlunar/" data-tooltip="AniList"><AniListIcon /></a>
