--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,7 +55,7 @@ import Lunar from "../assets/lunar.svg";
 				</div>
 			</div>
 
-			<div class="min-sm:col-span-4 flex flex-col relative">
+			<div class="sm:col-span-4 flex flex-col relative">
 				<TrafficConeAlt class="absolute size-12 bottom-full left-16 text-peach" />
 				<TrafficConeAlt class="absolute size-14 bottom-full left-27 text-peach" />
 
