--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -9,7 +9,7 @@ import LastFMIcon from "../assets/icons/socials/lastfm.svg";
 import MailIcon from "../assets/icons/socials/mail.svg";
 ---
 
-<section class="side !p-2">
+<section class="side p-2!">
 	<legend>socials</legend>
 	<ul class="grid grid-cols-4 [&_a]:flex [&_a]:justify-center [&_a]:size-full [&_a]:py-1">
 		<!-- z-50 for tooltips -->
