--- a/src/components/Webring.astro
+++ b/src/components/Webring.astro
@@ -13,7 +13,7 @@ import ArrowLeftIcon from "../assets/icons/arrow-left.svg";
 
 	<a data-tooltip="Catppuccin Webring" href="https://ctp-webr.ing/">
 		<img
-			src="catppuccin.png"
+			src="/catppuccin.png"
 			alt="catppuccin webring"
 			class="size-12 opacity-65 hover:scale-110 transition-all duration-300"
 			style="transition-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);"
