feat: add discord server

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -23,7 +23,7 @@ import MailIcon from "../assets/icons/socials/mail.svg";
 			<a href="https://www.twitter.com/trafficlunr" data-tooltip="Twitter"><TwitterIcon /></a>
 		</li>
 		<li class="z-50">
-			<a href="https://discord.com/users/1076507715775496233" data-tooltip="Discord: @trafficlunar"><DiscordIcon /></a>
+			<a href="https://discord.gg/48cXBFKvWQ" data-tooltip="Discord"><DiscordIcon /></a>
 		</li>
 		<li>
 			<a href="https://www.reddit.com/user/trafficlunr" data-tooltip="Reddit"><RedditIcon /></a>
