--- a/src/components/Webring.astro
+++ b/src/components/Webring.astro
@@ -6,7 +6,7 @@ import ArrowLeftIcon from "../assets/icons/arrow-left.svg";
 <div class="w-full flex justify-center items-center">
 	<a href="https://ctp-webr.ing/trafficlunar/previous">
 		<ArrowLeftIcon
-			class="size-10.5 p-2 origin-right hover:scale-110 transition-all duration-300"
+			class="size-10.5 p-2 origin-right opacity-65 hover:opacity-100 hover:scale-110 transition-all duration-300"
 			style="transition-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);"
 		/>
 	</a>
@@ -15,14 +15,14 @@ import ArrowLeftIcon from "../assets/icons/arrow-left.svg";
 		<img
 			src="/catppuccin.png"
 			alt="catppuccin webring"
-			class="size-12 opacity-65 hover:scale-110 transition-all duration-300"
+			class="size-12 opacity-65 hover:opacity-100 hover:scale-110 transition-all duration-300"
 			style="transition-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);"
 		/>
 	</a>
 
 	<a href="https://ctp-webr.ing/trafficlunar/next">
 		<ArrowRightIcon
-			class="size-10.5 p-2 origin-left hover:scale-110 transition-all duration-300"
+			class="size-10.5 p-2 origin-left opacity-65 hover:opacity-100 hover:scale-110 transition-all duration-300"
 			style="transition-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);"
 		/>
 	</a>
