feat: add more to about section
- also keep profile picture at same height and width to stop layout
changing on load

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ import Lunar from "../assets/lunar.svg";
 					<img
 						src="/pfp.png"
 						alt="profile picture"
-						class="rounded-full animate-spin animate-duration-2s hover:animate-running not-hover:animate-pause max-h-40 max-w-40"
+						class="rounded-full animate-spin animate-duration-2s hover:animate-running not-hover:animate-pause max-h-40 max-w-40 min-h-40 min-w-40"
 					/>
 				</a>
 
