--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,12 +10,29 @@ import LocationIcon from "../assets/icons/location.svg";
 ---
 
 <Layout>
-	<section class="transition-all duration-300 delay-100 starting:opacity-0 starting:translate-y-4">
+	<section class="transition-all duration-300 delay-100 starting:opacity-0 starting:translate-y-4 text-[0.938rem]">
 		<legend>about</legend>
 		<p>
 			Hey! I'm <strong class="text-peach">trafficlunar</strong>. I'm a <Age client:only /> year old self-proclaimed full-stack developer.
 		</p>
-		<p class="mt-2">I like coding things, maintaining and setting up servers, playing video games, and listening to music.</p>
+		<p class="mt-2">I like coding things, maintaining and setting up servers, playing video games, watching anime, and listening to music.</p>
+		<p class="mt-2">
+			This site was made using <a href="https://astro.build/" class="link">Astro</a> + <a href="https://svelte.dev/" class="link">Svelte</a> and is hosted
+			on both <a href="https://pages.cloudflare.com/" class="link" data-tooltip="At trafficlunar.net!">Cloudflare Pages (?)</a> and <a
+				href="https://nekoweb.org/"
+				class="link"
+				data-tooltip="At trafficlunar.nekoweb.org!">Nekoweb (?)</a
+			>.
+		</p>
+		<p class="mt-2">
+			I use <a href="https://archlinux.org/" class="link">Arch</a> BTW and <a href="https://hypr.land/" class="link">Hyprland</a> with <a
+				href="https://github.com/catppuccin/catppuccin?tab=readme-ov-file#-palette"
+				class="link">Catppuccin</a
+			>
+			<span class="text-red">F</span><span class="text-peach">r</span><span class="text-yellow">a</span><span class="text-green">p</span><span
+				class="text-blue">p</span
+			><span class="text-mauve">é</span> color schemes for everything (including this website!)
+		</p>
 
 		<div class="flex gap-1 mt-4">
 			<div data-tooltip="Pronouns" class="text-sm rounded bg-peach/25 text-peach w-fit pl-1 pr-2 py-1 flex gap-1 items-center">
